--- a/index.html
+++ b/index.html
@@ -36,274 +36,7 @@
   <link rel="icon" type="image/png" sizes="512x512" href="favicon/android-chrome-512x512.png">
 
   <!-- Styles -->
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      padding: 40px 20px;
-      background: linear-gradient(135deg, #1a252f 0%, #2c5282 50%, #1e3a8a 100%);
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .container {
-      background: rgba(245, 247, 250, 0.95);
-      border-radius: 20px;
-      padding: 24px;
-      max-width: 1000px;
-      width: 100%;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-    }
-
-    h1 {
-      margin: 0 0 10px;
-      color: #1a202c;
-      font-size: 32px;
-    }
-
-    .subtitle {
-      margin: 0 0 30px;
-      color: #4a5568;
-      font-size: 16px;
-    }
-
-    .drop-zone {
-      border: 3px dashed #cbd5e0;
-      border-radius: 12px;
-      padding: 40px;
-      text-align: center;
-      background: #f7fafc;
-      margin-bottom: 20px;
-      transition: all 0.3s ease;
-      cursor: pointer;
-    }
-
-    .drop-zone.drag-over {
-      border-color: #667eea;
-      background: #edf2f7;
-      transform: scale(1.02);
-    }
-
-    .drop-zone-icon {
-      font-size: 48px;
-      margin-bottom: 16px;
-    }
-
-    .drop-zone-text {
-      color: #2d3748;
-      font-size: 16px;
-      margin-bottom: 8px;
-    }
-
-    .drop-zone-hint {
-      color: #4a5568;
-      font-size: 14px;
-    }
-
-    .divider {
-      text-align: center;
-      margin: 20px 0;
-      color: #4a5568;
-      position: relative;
-    }
-
-    .divider::before,
-    .divider::after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      width: 45%;
-      height: 1px;
-      background: #acb2bb;
-    }
-
-    .divider::before {
-      left: 0;
-    }
-
-    .divider::after {
-      right: 0;
-    }
-
-    textarea {
-      width: 100%;
-      min-height: 200px;
-      padding: 16px;
-      border: 2px solid #e2e8f0;
-      border-radius: 8px;
-      font-family: 'Courier New', monospace;
-      font-size: 13px;
-      resize: vertical;
-      margin-bottom: 20px;
-    }
-
-    textarea:focus {
-      outline: none;
-      border-color: #667eea;
-    }
-
-    .button-group {
-      display: flex;
-      gap: 12px;
-    }
-
-    button {
-      flex: 1;
-      background: linear-gradient(135deg, #2c5282 0%, #1e3a8a 100%);
-      color: white;
-      border: none;
-      padding: 14px 24px;
-      border-radius: 10px;
-      font-size: 16px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-
-    button:hover {
-      transform: translateY(-2px);
-    }
-
-    button:active {
-      transform: translateY(0);
-    }
-
-    button:disabled {
-      opacity: 0.5;
-      cursor: not-allowed;
-    }
-
-    button.secondary {
-      background: #cbd5e0;
-      color: #2d3748;
-    }
-
-    button.secondary:hover {
-      background: #c2cbd6;
-    }
-
-    .preview-section {
-      display: none;
-      margin-top: 30px;
-    }
-
-    .preview-section.active {
-      display: block;
-    }
-
-    .preview-title {
-      font-size: 20px;
-      font-weight: 600;
-      color: #1a202c;
-      margin-top: 30px;
-      margin-bottom: 20px;
-    }
-
-    .preview {
-      display: flex;
-      gap: 20px;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 30px;
-      padding: 30px;
-      background: #f7fafc;
-      border-radius: 12px;
-      flex-wrap: wrap;
-    }
-
-    canvas {
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-
-    .download-buttons {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 12px;
-    }
-
-    .download-buttons svg {
-      width: 16px;
-      height: 16px;
-    }
-
-
-    .note {
-      margin-top: 20px;
-      padding: 16px;
-      background: #edf2f7;
-      border-radius: 8px;
-      font-size: 14px;
-      color: #4a5568;
-      line-height: 1.6;
-    }
-
-    .code-block {
-      margin-top: 16px;
-      padding: 16px;
-      background: #1a202c;
-      border-radius: 8px;
-      font-family: 'Courier New', monospace;
-      font-size: 13px;
-      color: #e2e8f0;
-      overflow-x: auto;
-      white-space: pre-wrap;
-      position: relative;
-    }
-
-    .copy-button {
-      position: absolute;
-      top: 12px;
-      right: 12px;
-      background: #2d3748;
-      color: #e2e8f0;
-      border: 1px solid #4a5568;
-      padding: 6px 12px;
-      border-radius: 6px;
-      font-size: 12px;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-    }
-
-    .copy-button:hover {
-      background: #4a5568;
-      border-color: #718096;
-      transform: none;
-    }
-
-    .copy-button.copied {
-      background: #38a169;
-      border-color: #38a169;
-    }
-
-    .error {
-      background: #fed7d7;
-      color: #c53030;
-      padding: 16px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      display: none;
-    }
-
-    .error.active {
-      display: block;
-    }
-
-    input[type="file"] {
-      display: none;
-    }
-
-    .margin-right {
-      margin-right: 6px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -382,286 +115,12 @@
     </div>
   </main>
 
+  <!-- JSZip Library -->
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-
-  <script>
-    let currentSVG = '';
-
-    const dropZone = document.getElementById('dropZone');
-    const fileInput = document.getElementById('fileInput');
-    const svgInput = document.getElementById('svgInput');
-    const errorDiv = document.getElementById('error');
-    const previewSection = document.getElementById('previewSection');
-
-    // Drop zone click to open file browser
-    dropZone.addEventListener('click', () => {
-      fileInput.click();
-    });
-
-    // Prevent default drag behaviors
-    ['dragenter', 'dragover', 'dragleave', 'drop'].forEach(eventName => {
-      dropZone.addEventListener(eventName, preventDefaults, false);
-      document.body.addEventListener(eventName, preventDefaults, false);
-    });
-
-    function preventDefaults(e) {
-      e.preventDefault();
-      e.stopPropagation();
-    }
-
-    // Highlight drop zone when dragging over it
-    ['dragenter', 'dragover'].forEach(eventName => {
-      dropZone.addEventListener(eventName, () => {
-        dropZone.classList.add('drag-over');
-      }, false);
-    });
-
-    ['dragleave', 'drop'].forEach(eventName => {
-      dropZone.addEventListener(eventName, () => {
-        dropZone.classList.remove('drag-over');
-      }, false);
-    });
-
-    // Handle dropped files
-    dropZone.addEventListener('drop', handleDrop, false);
-    fileInput.addEventListener('change', handleFileSelect, false);
-
-    function handleDrop(e) {
-      const dt = e.dataTransfer;
-      const files = dt.files;
-      handleFiles(files);
-    }
-
-    function handleFileSelect(e) {
-      const files = e.target.files;
-      handleFiles(files);
-    }
-
-    function handleFiles(files) {
-      if (files.length === 0) return;
-
-      const file = files[0];
-
-      if (!file.type.includes('svg') && !file.name.endsWith('.svg')) {
-        showError('Please upload an SVG file');
-        return;
-      }
-
-      const reader = new FileReader();
-      reader.onload = (e) => {
-        const svgContent = e.target.result;
-        svgInput.value = svgContent;
-        hideError();
-      };
-      reader.readAsText(file);
-    }
-
-    function showError(message) {
-      errorDiv.textContent = message;
-      errorDiv.classList.add('active');
-    }
-
-    function hideError() {
-      errorDiv.classList.remove('active');
-    }
-
-    function clearAll() {
-      svgInput.value = '';
-      fileInput.value = '';
-      previewSection.classList.remove('active');
-      hideError();
-    }
-
-    function validateSVG(svgString) {
-      // Basic validation
-      if (!svgString.trim()) {
-        showError('Please provide SVG file or code');
-        return false;
-      }
-
-      if (!svgString.includes('<svg')) {
-        showError('Invalid SVG: Must contain <svg> tag');
-        return false;
-      }
-
-      // Ensure xmlns is present
-      if (!svgString.includes('xmlns')) {
-        svgString = svgString.replace('<svg', '<svg xmlns="http://www.w3.org/2000/svg"');
-      }
-
-      currentSVG = svgString;
-      return true;
-    }
-
-    function generateFavicons() {
-      const svgString = svgInput.value;
-
-      if (!validateSVG(svgString)) {
-        return;
-      }
-
-      hideError();
-
-      // Update current SVG
-      currentSVG = svgString;
-
-      // Show preview section
-      previewSection.classList.add('active');
-
-      // Generate all previews
-      drawFavicon(document.getElementById('canvas16'), 16);
-      drawFavicon(document.getElementById('canvas32'), 32);
-      drawFavicon(document.getElementById('canvas64'), 64);
-      drawFavicon(document.getElementById('canvas128'), 128);
-      drawFavicon(document.getElementById('canvas512'), 512);
-
-      // Scroll to preview
-      previewSection.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
-
-      lucide.createIcons()
-    }
-
-    function drawFavicon(canvas, size) {
-      const ctx = canvas.getContext('2d');
-      const img = new Image();
-      const blob = new Blob([currentSVG], { type: 'image/svg+xml' });
-      const url = URL.createObjectURL(blob);
-
-      img.onload = function () {
-        ctx.clearRect(0, 0, size, size);
-        ctx.drawImage(img, 0, 0, size, size);
-        URL.revokeObjectURL(url);
-      };
-
-      img.onerror = function () {
-        showError('Error rendering SVG. Please check your SVG code is valid.');
-        URL.revokeObjectURL(url);
-      };
-
-      img.src = url;
-    }
-
-    function generatePNGBlob(size) {
-      return new Promise((resolve, reject) => {
-        if (!currentSVG) {
-          reject('No SVG to generate');
-          return;
-        }
-
-        const canvas = document.createElement('canvas');
-        canvas.width = size;
-        canvas.height = size;
-        const ctx = canvas.getContext('2d');
-
-        const img = new Image();
-        const blob = new Blob([currentSVG], { type: 'image/svg+xml' });
-        const url = URL.createObjectURL(blob);
-
-        img.onload = function () {
-          ctx.clearRect(0, 0, size, size);
-          ctx.drawImage(img, 0, 0, size, size);
-
-          canvas.toBlob((pngBlob) => {
-            resolve(pngBlob);
-            URL.revokeObjectURL(url);
-          });
-        };
-
-        img.onerror = function () {
-          reject('Failed to render SVG for size ' + size);
-          URL.revokeObjectURL(url);
-        };
-
-        img.src = url;
-      });
-    }
-
-    async function downloadPNG(size) {
-      try {
-        const blob = await generatePNGBlob(size);
-        let filename;
-
-        if (size === 16) filename = 'favicon-16x16.png';
-        else if (size === 32) filename = 'favicon-32x32.png';
-        else if (size === 180) filename = 'apple-touch-icon.png';
-        else if (size === 192) filename = 'android-chrome-192x192.png';
-        else if (size === 512) filename = 'android-chrome-512x512.png';
-
-        const link = document.createElement('a');
-        link.href = URL.createObjectURL(blob);
-        link.download = filename;
-        link.click();
-        URL.revokeObjectURL(link.href);
-
-      } catch (err) {
-        console.error(err);
-        showError('Error generating PNG for size ' + size);
-      }
-    }
-
-
-    async function downloadAll() {
-      if (!currentSVG) {
-        showError('Please generate favicons first');
-        return;
-      }
-
-      const sizes = [16, 32, 180, 192, 512];
-      const zip = new JSZip();
-      const folder = zip.folder('favicon');
-
-      for (const size of sizes) {
-        let filename;
-        if (size === 16) filename = 'favicon-16x16.png';
-        else if (size === 32) filename = 'favicon-32x32.png';
-        else if (size === 180) filename = 'apple-touch-icon.png';
-        else if (size === 192) filename = 'android-chrome-192x192.png';
-        else if (size === 512) filename = 'android-chrome-512x512.png';
-
-        try {
-          const blob = await generatePNGBlob(size);
-          folder.file(filename, blob);
-        } catch (err) {
-          console.error(err);
-          showError('Error generating ' + filename);
-        }
-      }
-
-      zip.generateAsync({ type: 'blob' }).then(function (content) {
-        const link = document.createElement('a');
-        link.href = URL.createObjectURL(content);
-        link.download = 'favicons.zip';
-        link.click();
-        URL.revokeObjectURL(link.href);
-      });
-    }
-
-
-    function copyToClipboard() {
-      const codeText = `<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/favicon/android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="/favicon/android-chrome-512x512.png">`;
-
-      navigator.clipboard.writeText(codeText).then(() => {
-        const copyButton = document.querySelector('.copy-button');
-        const originalText = copyButton.textContent;
-
-        copyButton.textContent = 'Copied!';
-        copyButton.classList.add('copied');
-
-        setTimeout(() => {
-          copyButton.textContent = originalText;
-          copyButton.classList.remove('copied');
-        }, 2000);
-      }).catch(err => {
-        console.error('Failed to copy:', err);
-        alert('Failed to copy to clipboard');
-      });
-    }
-  </script>
+  <!-- Icons -->
   <script src="https://unpkg.com/lucide@latest"></script>
+  <!-- Scripts -->
+  <script src="scripts.js" defer></script>
 </body>
 
 </html>
